# spruce.py

./: README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: python-application.yml
sprucepy/: __init__.py  api.py  config.py  main.py
sprucepy/modules/: currency.py
